# devora

./: .coverage  .env.example  .gitignore  CLAUDE.md  ChatGPT-GitHub Profile Analyzer Tool.md  Dockerfile  README.md  coverage.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-28T17-15-42-985Z.yml  page-2026-05-28T17-16-10-755Z.yml  page-2026-05-28T17-17-53-187Z.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_shares_and_worker_meta.py  0003_auth_ownership_audit.py
app/: main.py
app/api/: routes.py
app/core/: config.py  idempotency.py  logging.py  metrics.py  rate_limit.py  security.py
app/db/: models.py  session.py
app/eval/: dimensions.py  judges.py  monitoring.py
app/models/: contracts.py
app/queue/: manager.py
app/repositories/: analysis_store.py  audit_store.py  in_memory_store.py  oauth_state_store.py  oauth_store.py  (+4 more)
docs/: DEEP_RESEARCH_PROMPTS.md  Developer Identity Narrative Generation Research.md  GitHub Metrics for Developer Profiling.md  GitHub Profile README Excellence Research.md  GitHub Signals for Developer Archetypes.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  LLM-as-Judge for README Evaluation.md  PHASE2_GRAPHQL.md  PRD.md  PROGRESS.md  README_RESEARCH.md  SPEC.md  TRD.md
frontend/: package-lock.json  package.json  tsconfig.json
ops/: prometheus.yml
tests/: conftest.py  test_analysis_signals.py  test_api.py  test_eval_monitoring.py  test_eval_service.py  test_infra.py  test_routes.py  test_services_extra.py  test_stores.py  test_stores_extra.py  test_unit.py
(+37 files in other folders)
